--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,52 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header {
+  touch-action: none;
+}
+
+.cnt {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  width: 90vw;
+
+}
+.cntRow {
+  height: fit-content;
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
+  display: flex;
+}
+
+.gridCell {
+  font-size: medium;
+
+  padding: 0.1rem;
+  width: 100px;
+  height: 100px;
+  border: 1px white solid;
+}
+
+.invCard {
+  font-size: medium;
+  flex: 1;
+  margin: 1rem;
+  padding: 0.5rem;
+  border: 1px white solid;
+
+}
+
+.addBtn {
+}
+
+.grid {
+  margin: 1rem;
+  margin-left: 2rem;
+}
